--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.226 2007-05-02 20:57:15 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.227 2009-02-27 21:25:56 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2007 Christophe Geuzaine <geuz@geuz.org>
@@ -59,7 +59,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.3, ? ? 2007}
+\date{Version 1.3.3, ? ? 2009}
 
 \maketitle
 
@@ -999,8 +999,8 @@ seem to be available anymore).
 \item[1.3.2] (Nov 5, 2006) Fixed bug in polygon offset computation;
   fixed landscape mode in SVG; fixed potential out-of-bounds array
   access in stippling pattern parser.
-\item[1.3.3] (, 2007) Fixed memory leak in PDF code; added
-  \dd{gl2psGetOptions}; nicer SVG rendering (crispEdges).
+\item[1.3.3] (, 2009) Fixed memory leak in PDF code; added
+  \dd{gl2psGetOptions}; nicer SVG rendering (crispEdges, font attributes).
 \end{description}
 
 \end{document}
