--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.230 2009-09-30 21:50:19 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.231 2009-09-30 21:52:54 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2009 C. Geuzaine
@@ -1006,7 +1006,7 @@ seem to be available anymore).
 \item[1.3.3] (Feb 28, 2009) Fixed memory leak in PDF code; added
   \dd{gl2psGetOptions}; nicer SVG rendering (crispEdges, font attributes);
   fixed possible divisions by zero.
-\item[1.3.4] (Sep 30, 2009) Add support for rotated text in SVG output;
+\item[1.3.4] (Sep 30, 2009) Added support for rotated text in SVG output;
   fixed MSVC warnings.
 \end{description}
 
