--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.1 2009-10-02 22:07:46 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.2 2009-10-02 23:32:24 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2009 C. Geuzaine
@@ -32,6 +32,8 @@
 %  see http://www.geuz.org/gl2ps/.
 %
 %  Please report all bugs and problems to <gl2ps@geuz.org>.
+
+%%tth: \begin{html}<link href="/general.css" rel="stylesheet" type="text/css"><title>GL2PS: an OpenGL to PostScript printing library</title>\end{html}
 
 \documentclass[10pt]{article}
 
@@ -1009,5 +1011,18 @@ seem to be available anymore).
 \item[1.3.4] (Sep 30, 2009) Added support for rotated text in SVG output;
   fixed MSVC warnings.
 \end{description}
+
+\special{html:<p>
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="geuzaine@acm.caltech.edu">
+  <input type="hidden" name="item_name" value="GL2PS donation">
+  <input type="hidden" name="no_note" value="1">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="tax" value="0">
+  <input type="image" src="/images/donation.gif" name="submit"
+         alt="Make a donation with PayPal">
+  </form>
+  <p>Back to <a href="/">geuz.org</a>}
 
 \end{document}
