--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1,4 +1,3 @@
-%  $Id: gl2ps.tex,v 1.3 2009-10-11 22:07:21 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2009 C. Geuzaine
@@ -63,7 +62,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.5, October 12 2009}
+\date{Version 1.3.5, October 16 2009}
 
 \maketitle
 
@@ -873,6 +872,9 @@ in pdf code;
 \noemail{Sylvestre Ledru}{sylvestre.ledru@scilab.org} for SVG patches;
 %
 \noemail{Calixte Denizet}{Calixte.Denizet@ac-rennes.fr} for 64 bit patch.
+%
+\noemail{lion\_vasilief@yahoo.fr}{Ion Vasilief} and Paul Griffiths for
+rotated text in PDF output.
 
 \section{Links}
 \label{sec:links}
@@ -1011,8 +1013,9 @@ anymore.
   fixed possible divisions by zero.
 \item[1.3.4] (Sep 30, 2009) Added support for rotated text in SVG output;
   fixed MSVC warnings.
-\item[1.3.5] (Oct 12, 2009) Fixed PDF image output when compiled in 64 bit
-  mode; added cmake build file.
+\item[1.3.5] (Oct 16, 2009) Added support for rotated text in PDF output;
+  fixed PDF image output when compiled in 64 bit mode; added cmake
+  configuration.
 \end{description}
 
 \special{html:<p>
