--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -96,7 +96,7 @@ the OpenGL window.</em></small></td>
 <h2>Download</h2>
 The latest stable version of GL2PS is
 <a href="http://geuz.org/gl2ps/src/gl2ps-1.3.5.tgz">gl2ps-1.3.5.tgz</a>.
-Older versions and nightly CVS snapshots are available 
+Older versions and nightly source snapshots are available 
 <a href="http://geuz.org/gl2ps/src/">here</a>.
 <p>
 For questions and discussions about GL2PS features, resources, bugs, 
