--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1016,6 +1016,8 @@ anymore.
 \item[1.3.5] (Oct 16, 2009) Added support for rotated text in PDF output;
   fixed PDF image output when compiled in 64 bit mode; added cmake
   configuration.
+\item[?] (?) Added support for PixelZoom (set using glPixelZoom) in
+  postscript images.
 \end{description}
 
 \special{html:<p>
