--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -94,17 +94,21 @@ the OpenGL window.</em></small></td>
 </table>
 </center>
 <h2>Download</h2>
-The latest stable version of GL2PS is
-<a href="http://geuz.org/gl2ps/src/gl2ps-1.3.5.tgz">gl2ps-1.3.5.tgz</a>.
-Older versions and nightly source snapshots are available 
-<a href="http://geuz.org/gl2ps/src/">here</a>.
+The latest stable version of GL2PS is <a
+href="http://geuz.org/gl2ps/src/gl2ps-1.3.5.tgz">gl2ps-1.3.5.tgz</a>.  Older
+versions and nightly source snapshots are available <a
+href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
+'<code>svn co https://geuz.org/svn/gl2ps/trunk gl2ps</code>' (username:
+gl2ps, password: gl2ps).
 <p>
-For questions and discussions about GL2PS features, resources, bugs, 
-etc., see the <a href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps</a>
-mailing list. You can also subscribe to the
-<a href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
-mailing list to be notified automatically when a new version of GL2PS
-is released.
+For questions and discussions about GL2PS see the <a
+href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps mailing list</a>.  If
+you think you have found a bug you can also file a report directly <a
+href="https://geuz.org/trac/gl2ps/newticket">here</a> (username: gl2ps,
+password: gl2ps). You can also subscribe to the <a
+href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
+mailing list to be notified automatically when a new version of GL2PS is
+released.  
 <h2>Documentation</h2>}
 
 \tableofcontents
