--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -875,10 +875,12 @@ in pdf code;
 %
 \noemail{Sylvestre Ledru}{sylvestre.ledru@scilab.org} for SVG patches;
 %
-\noemail{Calixte Denizet}{Calixte.Denizet@ac-rennes.fr} for 64 bit patch.
+\noemail{Calixte Denizet}{Calixte.Denizet@ac-rennes.fr} for 64 bit patch;
 %
-\noemail{lion\_vasilief@yahoo.fr}{Ion Vasilief} and Paul Griffiths for
-rotated text in PDF output.
+\noemail{Ion Vasilief}{lion\_vasilief@yahoo.fr} and Paul Griffiths for
+rotated text in PDF output;
+%
+\noemail{Ben Abbott}{bpabbott@mac.com} for text alignment in SVG.
 
 \section{Links}
 \label{sec:links}
@@ -1021,7 +1023,8 @@ anymore.
   fixed PDF image output when compiled in 64 bit mode; added cmake
   configuration.
 \item[?] (?) Added support for PixelZoom (set using glPixelZoom) in
-  postscript images.
+  postscript images; fixed text rotation in TeX; added support for text
+  alignment in SVG.
 \end{description}
 
 \special{html:<p>
