--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1,6 +1,6 @@
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
-%  Copyright (C) 1999-2009 C. Geuzaine
+%  Copyright (C) 1999-2011 C. Geuzaine
 %
 %  This program is free software; you can redistribute it and/or
 %  modify it under the terms of either:
@@ -62,7 +62,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.5, October 16 2009}
+\date{Version FIXME, FIXME}
 
 \maketitle
 
