--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1024,7 +1024,7 @@ anymore.
   configuration.
 \item[?] (?) Added support for PixelZoom (set using glPixelZoom) in
   postscript images; fixed text rotation in TeX; added support for text
-  alignment in SVG.
+  alignment in SVG; fixed other minor bugs.
 \end{description}
 
 \special{html:<p>
