--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -62,7 +62,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version FIXME, FIXME}
+\date{Version 1.3.6, August 14 2011}
 
 \maketitle
 
@@ -95,7 +95,7 @@ the OpenGL window.</em></small></td>
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
-href="http://geuz.org/gl2ps/src/gl2ps-1.3.5.tgz">gl2ps-1.3.5.tgz</a>.  Older
+href="http://geuz.org/gl2ps/src/gl2ps-1.3.6.tgz">gl2ps-1.3.6.tgz</a>.  Older
 versions and nightly source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
 '<code>svn co https://geuz.org/svn/gl2ps/trunk gl2ps</code>' (username:
@@ -1022,9 +1022,9 @@ anymore.
 \item[1.3.5] (Oct 16, 2009) Added support for rotated text in PDF output;
   fixed PDF image output when compiled in 64 bit mode; added cmake
   configuration.
-\item[?] (?) Added support for PixelZoom (set using glPixelZoom) in
-  postscript images; fixed text rotation in TeX; added support for text
-  alignment in SVG; fixed other minor bugs.
+\item[1.3.6] (Aug 14, 2011) Added support for PixelZoom (set using
+  glPixelZoom) in postscript images; fixed text rotation in TeX; added
+  support for text alignment in SVG; fixed other minor bugs.
 \end{description}
 
 \special{html:<p>
