--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1030,7 +1030,7 @@ anymore.
 \special{html:<p>
   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
   <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="geuzaine@acm.caltech.edu">
+  <input type="hidden" name="business" value="paypal@geuz.org">
   <input type="hidden" name="item_name" value="GL2PS donation">
   <input type="hidden" name="no_note" value="1">
   <input type="hidden" name="currency_code" value="USD">
