update FSF address

--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -20,8 +20,8 @@
 %
 %  You should have received a copy of the GNU Library General Public
 %  License along with this library in the file named "COPYING.LGPL";
-%  if not, write to the Free Software Foundation, Inc., 675 Mass Ave,
-%  Cambridge, MA 02139, USA.
+%  if not, write to the Free Software Foundation, Inc., 51 Franklin
+%  Street, Fifth Floor, Boston, MA 02110-1301, USA.
 %
 %  You should have received a copy of the GL2PS License with this
 %  library in the file named "COPYING.GL2PS"; if not, I will be glad
@@ -109,6 +109,17 @@ password: gl2ps). You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
 released.
+<p>
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="paypal@geuz.org">
+  <input type="hidden" name="item_name" value="GL2PS donation">
+  <input type="hidden" name="no_note" value="1">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="tax" value="0">
+  <input type="image" src="/images/donation.gif" name="submit"
+         alt="Make a donation with PayPal">
+  </form>
 <h2>Documentation</h2>}
 
 \tableofcontents
@@ -1027,17 +1038,9 @@ anymore.
   support for text alignment in SVG; fixed other minor bugs.
 \end{description}
 
-\special{html:<p>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-  <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="paypal@geuz.org">
-  <input type="hidden" name="item_name" value="GL2PS donation">
-  <input type="hidden" name="no_note" value="1">
-  <input type="hidden" name="currency_code" value="USD">
-  <input type="hidden" name="tax" value="0">
-  <input type="image" src="/images/donation.gif" name="submit"
-         alt="Make a donation with PayPal">
-  </form>
-  <p>Back to <a href="/">geuz.org</a>}
+\special{html:
+<p>
+<a href="http://webhostingrating.com/libs/gl2ps-an-ua">Ukrainian translation</a>
+<p>Back to <a href="/">geuz.org</a>}
 
 \end{document}
