--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1039,8 +1039,10 @@ anymore.
 \end{description}
 
 \special{html:
+<h2>Documentation translations</h2>
 <p>
-<a href="http://webhostingrating.com/libs/gl2ps-an-ua">Ukrainian translation</a>
+<a href="http://webhostingrating.com/libs/gl2ps-an-ua">Ukrainian translation</a><br>
+<a href="http://www.fatcow.com/edu/geuz-directory-bg/">Bulgarian translation</a>
 <p>Back to <a href="/">geuz.org</a>}
 
 \end{document}
