--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1041,7 +1041,7 @@ anymore.
 \special{html:
 <h2>Documentation translations</h2>
 <p>
-<a href="http://webhostingrating.com/libs/gl2ps-an-ua">Ukrainian translation</a><br>
+<a href="http://www.webhostinghub.com/support/by/edu/gl2ps-an-uk">Ukrainian translation</a><br>
 <p>Back to <a href="/">geuz.org</a>}
 
 \end{document}
