--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -32,7 +32,7 @@
 %
 %  Please report all bugs and problems to <gl2ps@geuz.org>.
 
-%%tth: \begin{html}<link href="/general.css" rel="stylesheet" type="text/css"><title>GL2PS: an OpenGL to PostScript printing library</title>\end{html}
+%%tth: \begin{html}<link href="http://geuz.org/geuz.css" rel="stylesheet" type="text/css"> <style type="text/css"> h3 { border-bottom: 0; }</style><title>GL2PS: an OpenGL to PostScript printing library</title>\end{html}
 
 \documentclass[10pt]{article}
 
