--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -67,19 +67,23 @@
 \maketitle
 
 \special{html:<center>
-<table width="50%" cellspacing="2" cellpadding="2" border="0">
-<tr>
-<td><a href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz"><img
+<table width="50%" class="noborderpadded">
+<tr class="noborderpadded">
+<td class="noborderpadded"><a 
+     href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PS"></a></td>
-<td><a href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz"><img
+<td class="noborderpadded"><a 
+     href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="EPS"></a></td>
-<td><a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img
+<td class="noborderpadded"><a
+     href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PDF"></a></td>
-<td><a href="http://geuz.org/gl2ps/outBspCulledCompressed.svgz"><img
+<td class="noborderpadded"><a 
+     href="http://geuz.org/gl2ps/outBspCulledCompressed.svgz"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a></td>
 </tr>
-<tr>
-<td colspan="4"><small><em>Example: compressed
+<tr class="noborderpadded">
+<td colspan="4" class="noborderpadded"><small><em>Example: compressed
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz">PS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz">EPS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
