--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -67,23 +67,23 @@
 \maketitle
 
 \special{html:<center>
-<table width="50%" class="noborderpadded">
-<tr class="noborderpadded">
-<td class="noborderpadded"><a 
+<table width="50%" style="border:0;padding:4px;">
+<tr style="border:0;padding:4px;">
+<td style="border:0;padding:4px;"><a 
      href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PS"></a></td>
-<td class="noborderpadded"><a 
+<td style="border:0;padding:4px;"><a 
      href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="EPS"></a></td>
-<td class="noborderpadded"><a
+<td style="border:0;padding:4px;"><a
      href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PDF"></a></td>
-<td class="noborderpadded"><a 
+<td style="border:0;padding:4px;"><a 
      href="http://geuz.org/gl2ps/outBspCulledCompressed.svgz"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a></td>
 </tr>
-<tr class="noborderpadded">
-<td colspan="4" class="noborderpadded"><small><em>Example: compressed
+<tr style="border:0;padding:4px;">
+<td colspan="4" style="border:0;padding:4px;"><small><em>Example: compressed
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz">PS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz">EPS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
@@ -129,6 +129,8 @@ released.
 \tableofcontents
 
 \section{Introduction}
+
+a
 
 GL2PS is a C library providing high quality vector output for any OpenGL
 application. The main difference between GL2PS and other similar libraries
