--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -130,7 +130,7 @@ released.
 
 \section{Introduction}
 
-aaaaaa
+aaaaa
 
 GL2PS is a C library providing high quality vector output for any OpenGL
 application. The main difference between GL2PS and other similar libraries
