--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1,6 +1,6 @@
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
-%  Copyright (C) 1999-2011 C. Geuzaine
+%  Copyright (C) 1999-2012 C. Geuzaine
 %
 %  This program is free software; you can redistribute it and/or
 %  modify it under the terms of either:
@@ -62,7 +62,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.6, August 14 2011}
+\date{Version 1.3.7, September 2 2012}
 
 \maketitle
 
@@ -99,7 +99,7 @@ the OpenGL window.</em></small></td>
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
-href="http://geuz.org/gl2ps/src/gl2ps-1.3.6.tgz">gl2ps-1.3.6.tgz</a>.  Older
+href="http://geuz.org/gl2ps/src/gl2ps-1.3.7.tgz">gl2ps-1.3.7.tgz</a>.  Older
 versions and nightly source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
 '<code>svn co https://geuz.org/svn/gl2ps/trunk gl2ps</code>' (username:
@@ -1040,6 +1040,7 @@ anymore.
 \item[1.3.6] (Aug 14, 2011) Added support for PixelZoom (set using
   glPixelZoom) in postscript images; fixed text rotation in TeX; added
   support for text alignment in SVG; fixed other minor bugs.
+\item[1.3.7] (Sep 2, 2012) Minor documentation and build system fixes.
 \end{description}
 
 \special{html:
