--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -62,7 +62,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.7, September 2 2012}
+\date{Version 1.3.8, ? 2012}
 
 \maketitle
 
@@ -99,7 +99,7 @@ the OpenGL window.</em></small></td>
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
-href="http://geuz.org/gl2ps/src/gl2ps-1.3.7.tgz">gl2ps-1.3.7.tgz</a>.  Older
+href="http://geuz.org/gl2ps/src/gl2ps-1.3.8.tgz">gl2ps-1.3.8.tgz</a>.  Older
 versions and nightly source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
 '<code>svn co https://geuz.org/svn/gl2ps/trunk gl2ps</code>' (username:
@@ -1041,6 +1041,7 @@ anymore.
   glPixelZoom) in postscript images; fixed text rotation in TeX; added
   support for text alignment in SVG; fixed other minor bugs.
 \item[1.3.7] (Sep 2, 2012) Minor documentation and build system fixes.
+\item[1.3.8] (?) Minor compilation warning fixes.
 \end{description}
 
 \special{html:
