--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -900,7 +900,9 @@ in pdf code;
 \noemail{Ion Vasilief}{lion\_vasilief@yahoo.fr} and Paul Griffiths for
 rotated text in PDF output;
 %
-\noemail{Ben Abbott}{bpabbott@mac.com} for text alignment in SVG.
+\noemail{Ben Abbott}{bpabbott@mac.com} for text alignment in SVG;
+%
+\noemail{David Lonie}{david.lonie@kitware.com} for VTK patches.
 
 \section{Links}
 \label{sec:links}
