--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -62,7 +62,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.8, ? 2012}
+\date{Version 1.3.8, November 27 2012}
 
 \maketitle
 
@@ -1048,7 +1048,8 @@ anymore.
   glPixelZoom) in postscript images; fixed text rotation in TeX; added
   support for text alignment in SVG; fixed other minor bugs.
 \item[1.3.7] (Sep 2, 2012) Minor documentation and build system fixes.
-\item[1.3.8] (?) Minor compilation warning fixes.
+\item[1.3.8] (Nov 28, 2012) Handling of arbitrary length messages in
+  gl2psPrintf; added \dd{gl2psTextOptColor}; minor fixes.
 \end{description}
 
 \special{html:
