--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1052,10 +1052,6 @@ anymore.
   gl2psPrintf; added \dd{gl2psTextOptColor}; minor fixes.
 \end{description}
 
-\special{html:
-<h2>Documentation translations</h2>
-<p>
-<a href="http://www.webhostinghub.com/support/by/edu/gl2ps-an-uk">Ukrainian translation</a><br>
-<p>Back to <a href="/">geuz.org</a>}
+\special{html:<p>Back to <a href="/">geuz.org</a>}
 
 \end{document}
