--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -79,7 +79,7 @@
      href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PDF"></a></td>
 <td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulledCompressed.svgz"><img
+     href="http://geuz.org/gl2ps/outBspCulledCompressed.svg"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a></td>
 </tr>
 <tr style="border:0;padding:4px;">
@@ -87,7 +87,7 @@
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz">PS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz">EPS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
-<a href="http://geuz.org/gl2ps/outBspCulledCompressed.svgz">SVG</a>
+<a href="http://geuz.org/gl2ps/outBspCulledCompressed.svg">SVG</a>
 files created with the <tt>gl2psTest.c</tt> demo provided in the
 distribution. This illustrates the handling of smooth shading,
 intersecting primitives, line stippling, vector text rendering,
