--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -70,24 +70,24 @@
 <table width="50%" style="border:0;padding:4px;">
 <tr style="border:0;padding:4px;">
 <td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz"><img
+     href="http://geuz.org/gl2ps/outBspCulled.ps"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PS"></a></td>
 <td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz"><img
+     href="http://geuz.org/gl2ps/outBspCulled.eps"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="EPS"></a></td>
 <td style="border:0;padding:4px;"><a
      href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="PDF"></a></td>
 <td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulledCompressed.svg"><img
+     href="http://geuz.org/gl2ps/outBspCulled.svg"><img
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a></td>
 </tr>
 <tr style="border:0;padding:4px;">
 <td colspan="4" style="border:0;padding:4px;"><small><em>Example: compressed
-<a href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz">PS</a>,
-<a href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz">EPS</a>,
+<a href="http://geuz.org/gl2ps/outBspCulled.ps">PS</a>,
+<a href="http://geuz.org/gl2ps/outBspCulled.eps">EPS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
-<a href="http://geuz.org/gl2ps/outBspCulledCompressed.svg">SVG</a>
+<a href="http://geuz.org/gl2ps/outBspCulled.svg">SVG</a>
 files created with the <tt>gl2psTest.c</tt> demo provided in the
 distribution. This illustrates the handling of smooth shading,
 intersecting primitives, line stippling, vector text rendering,
