--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -83,7 +83,7 @@
      src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a></td>
 </tr>
 <tr style="border:0;padding:4px;">
-<td colspan="4" style="border:0;padding:4px;"><small><em>Example: compressed
+<td colspan="4" style="border:0;padding:4px;"><small><em>Example:
 <a href="http://geuz.org/gl2ps/outBspCulled.ps">PS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulled.eps">EPS</a>,
 <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
