--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -902,7 +902,10 @@ rotated text in PDF output;
 %
 \noemail{Ben Abbott}{bpabbott@mac.com} for text alignment in SVG;
 %
-\noemail{David Lonie}{david.lonie@kitware.com} for VTK patches.
+\noemail{David Lonie}{david.lonie@kitware.com} for VTK patches;
+%
+\noemail{Pantxo Diribarne}{pantxo.diribarne@gmail.com} for polygon offset
+improvement.
 
 \section{Links}
 \label{sec:links}
@@ -1050,6 +1053,7 @@ anymore.
 \item[1.3.7] (Sep 2, 2012) Minor documentation and build system fixes.
 \item[1.3.8] (Nov 27, 2012) Handling of arbitrary length messages in
   gl2psPrintf; added \dd{gl2psTextOptColor}; minor fixes.
+\item[1.3.9] () Improved \dd{GL_POLYGON_OFFSET_FILL}.
 \end{description}
 
 \special{html:<p>Back to <a href="/">geuz.org</a>}
