--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -62,40 +62,33 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.8, November 27 2012}
+%\date{Version 1.3.8, November 27 2012}
 
 \maketitle
 
 \special{html:<center>
-<table width="50%" style="border:0;padding:4px;">
-<tr style="border:0;padding:4px;">
-<td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulled.ps"><img
-     src="http://geuz.org/gl2ps/outThumbnail.png" alt="PS"></a></td>
-<td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulled.eps"><img
-     src="http://geuz.org/gl2ps/outThumbnail.png" alt="EPS"></a></td>
-<td style="border:0;padding:4px;"><a
-     href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img
-     src="http://geuz.org/gl2ps/outThumbnail.png" alt="PDF"></a></td>
-<td style="border:0;padding:4px;"><a 
-     href="http://geuz.org/gl2ps/outBspCulled.svg"><img
-     src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a></td>
-</tr>
-<tr style="border:0;padding:4px;">
-<td colspan="4" style="border:0;padding:4px;"><small><em>Example:
-<a href="http://geuz.org/gl2ps/outBspCulled.ps">PS</a>,
-<a href="http://geuz.org/gl2ps/outBspCulled.eps">EPS</a>,
-<a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
-<a href="http://geuz.org/gl2ps/outBspCulled.svg">SVG</a>
-files created with the <tt>gl2psTest.c</tt> demo provided in the
-distribution. This illustrates the handling of smooth shading,
-intersecting primitives, line stippling, vector text rendering,
-multiple viewports and mixed vector/bitmap output. Compare with a
-<a href="http://geuz.org/gl2ps/outBitmap.png">PNG</a> screenshot of
-the OpenGL window.</em></small></td>
-</tr>
-</table>
+  <p>
+    <a href="http://geuz.org/gl2ps/outBspCulled.ps"><img width="12%"
+     src="http://geuz.org/gl2ps/outThumbnail.png" alt="PS"></a>&nbsp;
+    <a href="http://geuz.org/gl2ps/outBspCulled.eps"><img width="12%"
+     src="http://geuz.org/gl2ps/outThumbnail.png" alt="EPS"></a>&nbsp;
+    <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf"><img width="12%"
+     src="http://geuz.org/gl2ps/outThumbnail.png" alt="PDF"></a>&nbsp;
+    <a href="http://geuz.org/gl2ps/outBspCulled.svg"><img width="12%"
+     src="http://geuz.org/gl2ps/outThumbnail.png" alt="SVG"></a>
+  </p>
+  <p><small><em>Example:
+    <a href="http://geuz.org/gl2ps/outBspCulled.ps">PS</a>,
+    <a href="http://geuz.org/gl2ps/outBspCulled.eps">EPS</a>,
+    <a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
+    <a href="http://geuz.org/gl2ps/outBspCulled.svg">SVG</a>
+    files created with the <tt>gl2psTest.c</tt> demo provided in the
+    distribution. This illustrates the handling of smooth shading,
+    intersecting primitives, line stippling, vector text rendering,
+    multiple viewports and mixed vector/bitmap output. Compare with a
+    <a href="http://geuz.org/gl2ps/outBitmap.png">PNG</a> screenshot of
+    the OpenGL window.</em></small>
+  </p>
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
