--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -106,17 +106,18 @@ password: gl2ps). You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
 released.
-<p>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-  <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="paypal@geuz.org">
-  <input type="hidden" name="item_name" value="GL2PS donation">
-  <input type="hidden" name="no_note" value="1">
-  <input type="hidden" name="currency_code" value="USD">
-  <input type="hidden" name="tax" value="0">
-  <input type="image" src="/images/donation.gif" name="submit"
-         alt="Make a donation with PayPal">
-  </form>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+  <p>
+    <input type="hidden" name="cmd" value="_xclick">
+    <input type="hidden" name="business" value="paypal@geuz.org">
+    <input type="hidden" name="item_name" value="GL2PS donation">
+    <input type="hidden" name="no_note" value="1">
+    <input type="hidden" name="currency_code" value="EUR">
+    <input type="hidden" name="tax" value="0">
+    You can also make a donation with
+    <input type="submit" value="PayPal" style="display:inline;">
+  </p>
+</form>
 <h2>Documentation</h2>}
 
 \tableofcontents
