--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -114,8 +114,9 @@ released.
     <input type="hidden" name="no_note" value="1">
     <input type="hidden" name="currency_code" value="EUR">
     <input type="hidden" name="tax" value="0">
-    You can also make a donation with
+    To help fund GL2PS development, you can make a
     <input type="submit" value="PayPal" style="display:inline;">
+    donation.
   </p>
 </form>
 <h2>Documentation</h2>}
