--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -106,7 +106,7 @@ password: gl2ps). You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
 released.
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<!-- form action="https://www.paypal.com/cgi-bin/webscr" method="post">
   <p>
     <input type="hidden" name="cmd" value="_xclick">
     <input type="hidden" name="business" value="paypal@geuz.org">
@@ -118,7 +118,7 @@ released.
     <input type="submit" value="PayPal" style="display:inline;">
     donation.
   </p>
-</form>
+</form -->
 <h2>Documentation</h2>}
 
 \tableofcontents
