--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -1,6 +1,6 @@
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
-%  Copyright (C) 1999-2012 C. Geuzaine
+%  Copyright (C) 1999-2015 C. Geuzaine
 %
 %  This program is free software; you can redistribute it and/or
 %  modify it under the terms of either:
@@ -62,7 +62,6 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-%\date{Version 1.3.8, November 27 2012}
 
 \maketitle
 
@@ -92,7 +91,7 @@
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is <a
-href="http://geuz.org/gl2ps/src/gl2ps-1.3.8.tgz">gl2ps-1.3.8.tgz</a>.  Older
+href="http://geuz.org/gl2ps/src/gl2ps-1.3.9.tgz">gl2ps-1.3.9.tgz</a>.  Older
 versions and nightly source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
 '<code>svn co https://geuz.org/svn/gl2ps/trunk gl2ps</code>' (username:
@@ -106,7 +105,7 @@ password: gl2ps). You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
 released.
-<!-- form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
   <p>
     <input type="hidden" name="cmd" value="_xclick">
     <input type="hidden" name="business" value="paypal@geuz.org">
@@ -118,7 +117,7 @@ released.
     <input type="submit" value="PayPal" style="display:inline;">
     donation.
   </p>
-</form -->
+</form>
 <h2>Documentation</h2>}
 
 \tableofcontents
@@ -900,7 +899,7 @@ rotated text in PDF output;
 \noemail{David Lonie}{david.lonie@kitware.com} for VTK patches;
 %
 \noemail{Pantxo Diribarne}{pantxo.diribarne@gmail.com} for polygon offset
-improvement.
+improvement and image scaling fix for SVG output.
 
 \section{Links}
 \label{sec:links}
@@ -1048,7 +1047,8 @@ anymore.
 \item[1.3.7] (Sep 2, 2012) Minor documentation and build system fixes.
 \item[1.3.8] (Nov 27, 2012) Handling of arbitrary length messages in
   gl2psPrintf; added \dd{gl2psTextOptColor}; minor fixes.
-\item[1.3.9] () Improved \dd{GL_POLYGON_OFFSET_FILL}.
+\item[1.3.9] (Oct 17, 2015) Improved \dd{GL_POLYGON_OFFSET_FILL}; fixed scaling
+  of images in SVG output.
 \end{description}
 
 \end{document}
