--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -94,14 +94,14 @@ The latest stable version of GL2PS is <a
 href="http://geuz.org/gl2ps/src/gl2ps-1.3.9.tgz">gl2ps-1.3.9.tgz</a>.  Older
 versions and nightly source snapshots are available <a
 href="http://geuz.org/gl2ps/src/">here</a>.  For read-only svn access use:
-'<code>svn co https://geuz.org/svn/gl2ps/trunk gl2ps</code>' (username:
-gl2ps, password: gl2ps).
+'<code>svn co <a href="https://geuz.org/svn/gl2ps/trunk" data-tooltip=
+ "Login and password: gl2ps">https://geuz.org/svn/gl2ps/trunk</a> gl2ps</code>'.
 <p>
 For questions and discussions about GL2PS see the <a
-href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps mailing list</a>.  If
-you think you have found a bug you can also file a report directly <a
-href="https://geuz.org/trac/gl2ps/newticket">here</a> (username: gl2ps,
-password: gl2ps). You can also subscribe to the <a
+href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps mailing list</a>.  If you
+think you have found a bug you can also file a report directly <a
+href="https://geuz.org/trac/gl2ps/newticket" data-tooltip="Login and password:
+gl2ps">here</a>. You can also subscribe to the <a
 href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
 mailing list to be notified automatically when a new version of GL2PS is
 released.
