--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -917,7 +917,8 @@ rotated text in PDF output;
 \noemail{David Lonie}{david.lonie@kitware.com} for VTK patches;
 %
 \noemail{Pantxo Diribarne}{pantxo.diribarne@gmail.com} for polygon offset
-improvement and image scaling fix for SVG output;
+improvement, image scaling fix for SVG output, PostScript viewport color bug
+fix;
 %
 \noemail{David Lonie}{david.lonie@kitware.com} for direct addition of promitives
 (for newer OpenGL APIs without feedback buffer).
