--- a/gl2ps.tex
+++ b/gl2ps.tex
@@ -944,7 +944,7 @@ bug fix, \dd{gl2psLineCap} and \dd{gl2psLineJoin};
 \noemail{David Lonie}{david.lonie@kitware.com} for direct addition of promitives
 (for newer OpenGL APIs without feedback buffer);
 %
-\normail{Dan Lipsa}{dan.lipsa@kitware.com} for bug fixes in PDF output.
+\noemail{Dan Lipsa}{dan.lipsa@kitware.com} for bug fixes in PDF output.
 
 \section{Links}
 \label{sec:links}
